// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ReferenceSelector /> should render 1`] = `
<ReferenceSelector__StyledReferenceSelect>
  <label>
    Source Reference
  </label>
  <ReferenceSelector__ReferenceSelectList>
    <ReferenceSelectorItem
      active={false}
      key="foo"
      onClick={[Function]}
      reference={
        Object {
          "id": "foo",
          "key": "bar",
        }
      }
    />
  </ReferenceSelector__ReferenceSelectList>
  <Input__InputError />
</ReferenceSelector__StyledReferenceSelect>
`;

exports[`<ReferenceSelector /> should render NoneFound when [references.length=0] 1`] = `
<ReferenceSelector__StyledReferenceSelect>
  <label>
    Source Reference
  </label>
  <ReferenceSelector__ReferenceSelectList>
    <NoneFoundSection
      noun="source references"
    />
  </ReferenceSelector__ReferenceSelectList>
  <Input__InputError />
</ReferenceSelector__StyledReferenceSelect>
`;
